# gazella

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
gazella/: __init__.py
src/gazella/layer/: activation.py  attention.py  blocks.py  norm.py
src/gazella/model/: __init__.py  gazella.py
src/gazella/optim/: agd.py
